<resources>
    <string name="app_name">battleship</string>
    <string name="battleship">Battleship</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />
    <string name="settings">Settings</string>
    <string name="vibration">Vibration</string>
    <string name="sounds">Sounds</string>
    <string name="beginner">Beginner</string>
    <string name="normal">Normal</string>
    <string name="choose">Choose</string>
    <string name="playWithComputer">Play with computer</string>
    <string name="playViaWifi">Play via WiFi</string>
    <string name="play">Play</string>
    <string name="exit">Exit</string>
    <string name="board_field">Board field</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings relatedtryLoginogin -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_email">Invalid email</string>
    <string name="error_password">Minimum 8 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">LogIn</string>
    <string name="loginByGoogle">Login by Google</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="hashPass">Password</string>
    <string name="loginError">Wrong email or hashPass</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="customName">Custom name</string>
    <string name="createAccount">Create account</string>
    <string name="createAccountByGoogle">Create account by google</string>
    <string name="playViaBluetooth">Play via bluetooth</string>
    <string name="searchOpponent">Search opponent</string>
    <string name="opponentName">Opponent name</string>
    <string name="autoArrange">Auto arrange</string>
    <string name="reset">reset</string>
    <string name="start">Start</string>
    <string name="putAllShipsOnBoard">Put all ships on board</string>
    <string name="hide">Hide</string>
    <string name="nothingToDo">Nothing to do</string>
    <string name="end">End</string>
    <string name="revenge">Revenge</string>
    <string name="opponentLeftGame">Opponent left game</string>
    <string name="emptyCredentials">Please enter the credentials</string>
    <string name="error_empty">Field can\'t be empty</string>
    <string name="error_repeat_password">Passwords are different</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_email_exists">Email exists</string>
    <string name="error_login">Wrong email or password</string>
    <string name="percentChar">%</string>
    <string name="playerName">Name</string>
    <string name="shipFields">Ship fields</string>
    <string name="waterFields">Water fields</string>
    <string name="points">Points</string>
    <string name="youWin">You win!</string>
    <string name="youLose">You lose!</string>
</resources>
