<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:gravity="center"
    tools:context="com.example.michal.battleship.views.MainActivity">

    <Button
        android:id="@+id/btnMenuPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnMenuSetting"
        android:layout_marginBottom="20dp"
        android:text="@string/play" />

    <Button
        android:id="@+id/btnMenuSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnMenuExit"
        android:layout_marginBottom="20dp"
        android:text="@string/settings" />

    <Button
        android:id="@+id/btnMenuExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit" />
</RelativeLayout>
